--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>MeghDoot Textiles - Premium Wholesale Indian Ethnic Wear | Sarees, Kurtis, Lehengas from Surat</title>
-    <meta name="title" content="MeghDoot Textiles - Premium Wholesale Indian Ethnic Wear | Sarees, Kurtis, Lehengas from Surat" />
-    <meta name="description" content="Leading wholesale supplier of Indian ethnic wear from Surat. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers. 25+ years experience, GST registered, 2-5 day dispatch." />
+    <title>MeghDoot Textiles - Premium Manufacturer & Wholesaler of Indian Ethnic Wear | Sarees, Kurtis, Lehengas from Bengaluru, Surat & Kolkata</title>
+    <meta name="title" content="MeghDoot Textiles - Premium Manufacturer & Wholesaler of Indian Ethnic Wear | Sarees, Kurtis, Lehengas from Bengaluru, Surat & Kolkata" />
+    <meta name="description" content="Leading manufacturer & wholesaler of Indian ethnic wear from Bengaluru, Surat & Kolkata. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers. 25+ years experience, GST registered, 2-5 day dispatch." />
     <meta name="keywords" content="wholesale sarees, ethnic wear wholesale, kurtis wholesale, lehengas wholesale, Indian textiles, Surat wholesale, boutique suppliers, retail suppliers, ethnic wear manufacturers, wholesale fashion, Indian clothing wholesale, traditional wear wholesale" />
     <meta name="author" content="MeghDoot Textiles Private Limited" />
     <meta name="robots" content="index, follow" />
@@ -26,8 +26,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://meghdoottextiles.com" />
-    <meta property="og:title" content="MeghDoot Textiles - Premium Wholesale Indian Ethnic Wear | Sarees, Kurtis, Lehengas" />
-    <meta property="og:description" content="Leading wholesale supplier of Indian ethnic wear from Surat. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers. 25+ years experience, GST registered." />
+    <meta property="og:title" content="MeghDoot Textiles - Premium Manufacturer & Wholesaler of Indian Ethnic Wear | Sarees, Kurtis, Lehengas" />
+    <meta property="og:description" content="Leading manufacturer & wholesaler of Indian ethnic wear from Bengaluru, Surat & Kolkata. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers. 25+ years experience, GST registered." />
     <meta property="og:image" content="https://meghdoottextiles.com/favicon.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -37,8 +37,8 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://meghdoottextiles.com" />
-    <meta name="twitter:title" content="MeghDoot Textiles - Premium Wholesale Indian Ethnic Wear" />
-    <meta name="twitter:description" content="Leading wholesale supplier of Indian ethnic wear from Surat. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers." />
+    <meta name="twitter:title" content="MeghDoot Textiles - Premium Manufacturer & Wholesaler of Indian Ethnic Wear" />
+    <meta name="twitter:description" content="Leading manufacturer & wholesaler of Indian ethnic wear from Bengaluru, Surat & Kolkata. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers." />
     <meta name="twitter:image" content="https://meghdoottextiles.com/favicon.png" />
     
     <!-- Additional SEO Meta Tags -->
@@ -65,7 +65,7 @@
       "alternateName": "MeghDoot Textiles",
       "url": "https://meghdoottextiles.com",
       "logo": "https://meghdoottextiles.com/favicon.png",
-      "description": "Leading wholesale supplier of Indian ethnic wear from Surat. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers.",
+      "description": "Leading manufacturer & wholesaler of Indian ethnic wear from Bengaluru, Surat & Kolkata. Premium sarees, kurtis, lehengas for retailers, boutiques & resellers.",
       "foundingDate": "1998",
       "founder": {
         "@type": "Person",
